--- a/views/templates/login.ejs
+++ b/views/templates/login.ejs
@@ -11,6 +11,9 @@
         <input type="email" name="email" required />
         <button type="submit">Se connecter</button>
       </form>
+      <div class="signup-link">
+        <p>Pas encore de compte ? <a href="/signup">Créer un compte</a></p>
+      </div>
     </div>
     <script>
       document.getElementById("loginForm").addEventListener("submit", async (e) => {
