--- a/views/templates/listMessage.ejs
+++ b/views/templates/listMessage.ejs
@@ -7,7 +7,10 @@
     <div class="container">
       <div class="header">
         <h1>Liste des messages</h1>
-        <a href="/" class="logout-button">Se déconnecter</a>
+        <div class="header-actions">
+          <a href="/profile?userId=<%= userId %>" class="profile-button">Mon profil</a>
+          <a href="/" class="logout-button">Se déconnecter</a>
+        </div>
       </div>
       <div class="new-post-form">
         <h2>Nouveau message</h2>
