Add block when user not logged in

--- a/views/templates/listMessage.ejs
+++ b/views/templates/listMessage.ejs
@@ -9,7 +9,7 @@
         <h1>Liste des messages</h1>
         <div class="header-actions">
           <a href="/profile?userId=<%= userId %>" class="profile-button">Mon profil</a>
-          <a href="/" class="logout-button">Se déconnecter</a>
+          <a href="/logout" class="logout-button">Se déconnecter</a>
         </div>
       </div>
       <div class="new-post-form">
