Group chats and images

--- a/views/templates/groups.ejs
+++ b/views/templates/groups.ejs
@@ -36,6 +36,9 @@
                   <% }) %>
                 </ul>
               </div>
+              <div class="group-actions">
+                <a href="/group/<%= group._id %>/messages" class="view-messages-btn">Voir les messages</a>
+              </div>
             </div>
           <% }) %>
         </div>
